Fix color for links to improve contrast.

--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {color: #D2691E;}
+a {color: #753a0f;}
 
 nav {
     display: flex;
